@@ -1473,6 +1473,39 @@ $_set_mark_group$
   END;
 $_set_mark_group$;
 
+CREATE or REPLACE FUNCTION emaj.emaj_find_previous_mark_group(v_groupName TEXT, v_datetime TIMESTAMPTZ) 
+RETURNS text LANGUAGE plpgsql AS
+$emaj_find_previous_mark_group$
+-- This function returns the name of the mark that immediately precedes a given date and time. 
+-- The function can be called by both emaj_adm and emaj_viewer roles.
+-- Input: group name, date and time
+-- Output: mark name, or NULL if there is no mark before the given date and time
+  DECLARE
+    v_groupState    TEXT;
+    v_markName      TEXT;
+  BEGIN
+-- check that the group is recorded in emaj_group table
+-- (the SELECT is coded FOR UPDATE to lock the accessed group, avoiding any operation on this group at the same time)
+    SELECT group_state INTO v_groupState FROM emaj.emaj_group WHERE group_name = v_groupName FOR UPDATE;
+    IF NOT FOUND THEN
+      RAISE EXCEPTION 'emaj_find_previous_mark_group: group % has not been created', v_groupName;
+    END IF;
+-- check that the group is in LOGGING state
+    IF v_groupState <> 'LOGGING' THEN
+      RAISE EXCEPTION 'emaj_find_previous_mark_group: group % is not in logging state', v_groupName;
+    END IF;
+-- find the requested mark
+    SELECT mark_name INTO v_markName FROM emaj.emaj_mark 
+      WHERE mark_group = v_groupName AND mark_datetime < v_datetime
+      ORDER BY mark_datetime DESC LIMIT 1;
+    IF NOT FOUND THEN
+      RETURN NULL;
+    ELSE
+      RETURN v_markName;
+    END IF;
+  END;
+$emaj_find_previous_mark_group$;
+
 CREATE or REPLACE FUNCTION emaj.emaj_delete_mark_group(v_groupName TEXT, v_mark TEXT) 
 RETURNS void LANGUAGE plpgsql AS
 $emaj_delete_mark_group$
@@ -2661,6 +2694,7 @@ REVOKE ALL ON FUNCTION emaj.emaj_start_group(v_groupName TEXT, v_mark TEXT) FROM
 REVOKE ALL ON FUNCTION emaj.emaj_stop_group(v_groupName TEXT) FROM PUBLIC;
 REVOKE ALL ON FUNCTION emaj.emaj_set_mark_group(v_groupName TEXT, v_mark TEXT) FROM PUBLIC;
 REVOKE ALL ON FUNCTION emaj._set_mark_group(v_groupName TEXT, v_mark TEXT) FROM PUBLIC;
+REVOKE ALL ON FUNCTION emaj.emaj_find_previous_mark_group(v_groupName TEXT, v_datetime TIMESTAMPTZ) FROM PUBLIC;
 REVOKE ALL ON FUNCTION emaj.emaj_delete_mark_group(v_groupName TEXT, v_mark TEXT) FROM PUBLIC; 
 REVOKE ALL ON FUNCTION emaj.emaj_rename_mark_group(v_groupName TEXT, v_mark TEXT, v_newName TEXT) FROM PUBLIC;
 REVOKE ALL ON FUNCTION emaj.emaj_rollback_group(v_groupName TEXT, v_mark TEXT) FROM PUBLIC; 
@@ -2702,6 +2736,7 @@ GRANT EXECUTE ON FUNCTION emaj.emaj_start_group(v_groupName TEXT, v_mark TEXT) T
 GRANT EXECUTE ON FUNCTION emaj.emaj_stop_group(v_groupName TEXT) TO emaj_adm;
 GRANT EXECUTE ON FUNCTION emaj.emaj_set_mark_group(v_groupName TEXT, v_mark TEXT) TO emaj_adm;
 GRANT EXECUTE ON FUNCTION emaj._set_mark_group(v_groupName TEXT, v_mark TEXT) TO emaj_adm;
+GRANT EXECUTE ON FUNCTION emaj.emaj_find_previous_mark_group(v_groupName TEXT, v_datetime TIMESTAMPTZ) TO emaj_adm;
 GRANT EXECUTE ON FUNCTION emaj.emaj_delete_mark_group(v_groupName TEXT, v_mark TEXT) TO emaj_adm; 
 GRANT EXECUTE ON FUNCTION emaj.emaj_rename_mark_group(v_groupName TEXT, v_mark TEXT, v_newName TEXT) TO emaj_adm;
 GRANT EXECUTE ON FUNCTION emaj.emaj_rollback_group(v_groupName TEXT, v_mark TEXT) TO emaj_adm; 
@@ -2724,6 +2759,7 @@ GRANT EXECUTE ON FUNCTION emaj.emaj_snap_group(v_groupName TEXT, v_dir TEXT) TO 
 GRANT EXECUTE ON FUNCTION emaj.emaj_estimate_rollback_duration(v_groupName TEXT, v_mark TEXT) TO emaj_adm;
 
 -- and give appropriate rights on functions to emaj_viewer role
+GRANT EXECUTE ON FUNCTION emaj.emaj_find_previous_mark_group(v_groupName TEXT, v_datetime TIMESTAMPTZ) TO emaj_viewer;
 GRANT EXECUTE ON FUNCTION emaj._log_stat_table(v_schemaName TEXT, v_tableName TEXT, v_tsFirstMark TIMESTAMPTZ, v_tsLastMark TIMESTAMPTZ) TO emaj_viewer;
 GRANT EXECUTE ON FUNCTION emaj.emaj_log_stat_group(v_groupName TEXT, v_firstMark TEXT, v_lastMark TEXT) TO emaj_viewer; 
 GRANT EXECUTE ON FUNCTION emaj.emaj_detailed_log_stat_group(v_groupName TEXT, v_firstMark TEXT, v_lastMark TEXT) TO emaj_viewer;
